# pi-hole-public

./: .gitignore  README.md  airesponses.py  crontab-setup.txt  dataplot.py  fingerprint.py  log.py  logreader.py  pleasesetuphere.py  requirements.txt  setup.cfg  ui.py
src/: ui.py
src/wifi_monitoring_util/: __init__.py  airesponses.py  log.py  logreader.py  ui.py
src/wifi_monitoring_util.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: testlog2.txt
wifi_monitoring_util.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
