[metadata]
name = wifi-monitoring-util  
version = 0.1.3.1
author = Isaac Zhang
author_email = isaac.cw.zhang@gmail.com
description = Wifi Monitoring scripts in Python for the Pi-Hole
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tigerisaac/wifi-monitor-util  
license = GPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Networking :: Monitoring

[options]
package_dir =
    = src
packages = find:  

[options.packages.find]
where = src

python_requires = >=3.8
install_requires =
    requests
    matplotlib
    pandas
    groq

[options.extras_require]
dev =
    black
    flake8
    pytest

[options.package_data]
wifi_monitoring_util = data/*.json

[options.entry_points]
console_scripts =
    logreader = wifi_monitoring_util.logreader:main
    dataplot = wifi_monitoring_util.dataplot:main
